fix: fixed post excerpt align

--- a/assets/sass/components/_post.scss
+++ b/assets/sass/components/_post.scss
@@ -29,7 +29,7 @@
 }
 
 .postExcerpt {
-  text-align: initial;
+  text-align: justify;
   text-decoration: none;
   color: $white;
 }
