--- a/assets/sass/pages/_list.scss
+++ b/assets/sass/pages/_list.scss
@@ -1,5 +1,5 @@
 @import "../utils/variables";
 
 .listHeader, .listContent {
-    text-align: justify;
+    text-align: left;
 }
